<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBlack">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/value_zero"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:layout_width="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_height="90dp" android:id="@+id/calculatorField"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_seven"
                    android:text="@string/value_seven"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button7"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_eight"
                    android:text="@string/value_eight"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button8"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_nine"
                    android:text="@string/value_nine"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button9"/>

                <Button
                    android:onClick="clear"
                    android:text="clear"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/OperationButton"
                    android:layout_height="match_parent" android:id="@+id/buttonClear"/>

            </TableRow>

            <TableRow android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_four"
                    android:text="@string/value_four"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button4"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_five"
                    android:text="@string/value_five"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button5"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_six"
                    android:text="@string/value_six"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button6"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:text="multiply"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:theme="@style/OperationButton"
                        android:layout_height="0dp" android:id="@+id/buttonMultiply"/>

                    <Button
                        android:text="Divide"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:theme="@style/OperationButton"
                        android:layout_height="0dp" android:id="@+id/buttonDivide"/>

                </LinearLayout>

            </TableRow>

            <TableRow android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_one"
                    android:text="@string/value_one"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button1"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_two"
                    android:text="@string/value_two"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button2"/>

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_three"
                    android:text="@string/value_three"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button3"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:text="subtract"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:theme="@style/OperationButton"
                        android:layout_height="0dp" android:id="@+id/buttonSubtract"/>

                    <Button
                        android:text="Add"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:theme="@style/OperationButton"
                        android:layout_height="0dp" android:id="@+id/buttonAdd"/>

                </LinearLayout>

            </TableRow>

            <TableRow android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:onClick="displayNumber"
                    android:tag="@string/value_zero"
                    android:text="@string/value_zero"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/button0"/>

                <Button
                    android:text="."
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/NumberButton"
                    android:layout_height="match_parent" android:id="@+id/buttonDot"/>

                <Button
                    android:text="Equal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:theme="@style/EqualButton"
                    android:layout_height="match_parent" android:id="@+id/buttonEqual"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>